# foxguard

./: Cargo.toml  LAUNCH.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
action/: action.yml  entrypoint.sh
assets/terminalizer/: config.yml  foxguard-demo.yml  foxguard-story.yml
benchmarks/: .gitignore  README.md  run.sh
src/: baseline.rs  cli.rs  config.rs  git.rs  lib.rs  main.rs  secrets.rs
src/engine/: mod.rs  parser.rs  scanner.rs
src/fix/: command_injection.rs  mod.rs  sql_injection.rs  xss.rs
src/report/: json.rs  sarif.rs  terminal.rs
src/rules/: common.rs  csharp.rs  go.rs  go_taint.rs  java.rs  javascript.rs  javascript_taint.rs  mod.rs  php.rs  python.rs  python_taint.rs  ruby.rs  rust_lang.rs  semgrep_compat.rs  semgrep_taint.rs  swift.rs
tests/: integration.rs  realistic_fixtures.rs  semgrep_integration.rs  semgrep_parity.rs
tests/fixtures/: safe.go  safe.js  safe.py  vulnerable.go  vulnerable.js  vulnerable.py
tests/semgrep_rules/: eval-usage.yaml  hardcoded-secret.yaml  sql-injection.yaml
www/: astro.config.mjs  package-lock.json  package.json  wrangler.toml
www/src/layouts/: Base.astro
www/src/pages/: index.astro
